# atradio.fm

./: .gitignore  1  Cargo.toml  LICENSE  README.md  compose.yml  console  flake.nix  mise.toml  package.json  tsconfig.base.json  turbo.json
.github/workflows/: bindings-release.yml  flakehub-publish-tagged.yml  nix.yml  release-bsd-aarch64.yml  release-bsd.yml  release.yml  test.yml
apps/api/: .env.example  package.json  tsconfig.json
apps/api/drizzle/: 0000_silly_stryfe.sql  0001_lucky_living_mummy.sql  0002_cuddly_dakota_north.sql
apps/api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
apps/api/src/: app.ts  cache.ts  env.ts  index.ts
apps/api/src/connect/: auth.ts  hub.test.ts  hub.ts  protocol.ts
apps/api/src/db/: index.ts  schema.ts
apps/api/src/discord/: firehose.ts  format.ts
apps/api/src/jetstream/: consumer.ts
apps/api/src/lib/: playlist.test.ts  playlist.ts  profile.ts
apps/api/src/live/: bus.ts  index.ts
apps/api/src/proxy/: index.ts
apps/api/src/xrpc/: index.ts
apps/media-proxy/: README.md  gleam.toml  manifest.toml
apps/media-proxy/src/: atradio_media_proxy.gleam  proxy_cache_ffi.erl  proxy_gun_ffi.erl  proxy_ratelimit_ffi.erl
apps/media-proxy/src/media_proxy/: cache.gleam  config.gleam  icy.gleam  playlist.gleam  ratelimit.gleam  simple.gleam  stream.gleam
apps/media-proxy/test/: atradio_media_proxy_test.gleam
apps/web/: .env.example  .env.production  .env.production.example  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
apps/web/public/: client-metadata.json
apps/web/scripts/: generate-icons.mjs
apps/web/src/: main.tsx  providers.tsx  router.tsx  vite-env.d.ts
apps/web/src/atoms/: audioSettings.ts  auth.ts  connect.test.ts  connect.ts  customStations.ts  favorites.ts  player.ts  ui.ts
apps/web/src/components/: AddStationModal.tsx  AudioBars.tsx  AudioSettingsModal.tsx  AudioSettingsSync.tsx  AuthInitializer.tsx  BottomNav.tsx  CategoryGrid.tsx  CliInstallModal.tsx  CommentComposer.tsx  CommentsModal.tsx  CommentsPanel.tsx  ConnectBanner.tsx  ConnectProvider.tsx  DevicePicker.tsx  EmptyState.tsx  Footer.tsx  IconTangled.tsx  LanguageSwitcher.tsx  Layout.tsx  LoginModal.tsx  MediaPicker.tsx  ModalCloseButton.tsx  Navbar.tsx  NotificationBell.tsx  PermissionBanner.tsx  PlayStatusSync.tsx  Player.tsx  PlayerReactionRain.tsx  RecentlyPlayedRow.tsx  SearchPalette.tsx  SessionRefresher.tsx  ShortcutsHelp.tsx  Skeletons.tsx  StationCard.tsx  StationGrid.tsx  StationLogo.tsx  StationReactions.tsx  UserDataSync.tsx
apps/web/src/hooks/: useAuth.ts  (+7 more)
cli/: Cargo.toml  README.md  build.rs  flake.nix  package.nix
cli/npm/: .gitignore  README.md  package.json
cli/npm/scripts/: publish-local.sh  stamp-version.mjs
cli/proto/atradio/v1/: atradio.proto
cli/scripts/: gen-lexicons.sh
cli/src/: builder_types.rs  cli.rs  config.rs  fm_atradio.rs  main.rs  mdns.rs  mpris.rs  remote.rs  settings.rs  theme.rs
cli/src/appview/: client.rs  mod.rs  models.rs
cli/src/atproto/: mod.rs  profile.rs
cli/src/fm_atradio/: actor.rs  audio.rs  comment.rs  favorite.rs  get_comments.rs  get_favorites.rs  get_global_recently_played.rs  get_listener_counts.rs  get_notifications.rs  get_recently_played.rs  get_stations.rs  reaction.rs  station.rs  update_seen.rs
cli/src/fm_atradio/actor/: status.rs
cli/src/fm_atradio/audio/: settings.rs
cli/src/grpc/: atradio.v1.rs  client.rs  mod.rs  server.rs
cli/src/player/: dsp.rs  mod.rs
cli/src/radio/: browser.rs  mod.rs  resolve.rs
cli/src/rcd/: atradio.freebsd.rc  atradio.netbsd.rc  mod.rs
cli/src/systemd/: atradio.service  mod.rs
cli/src/tui/: dsp_rows.rs  mod.rs  state.rs  ui.rs
crates/atradio-nif/: Cargo.toml
crates/atradio-nif/src/: lib.rs
crates/atradio-sdk/: Cargo.toml  LICENSE-APACHE  README.md
crates/atradio-sdk/scripts/: gen-lexicons.sh
crates/atradio-sdk/src/: agent.rs  appview.rs  auth.rs  error.rs  facets.rs  lib.rs  namespaces.rs
crates/atradio-sdk/src/fm_atradio/: actor.rs  audio.rs  get_comments.rs  get_listener_counts.rs  get_recently_played.rs  get_stations.rs  station.rs
crates/atradio-sdk/src/fm_atradio/audio/: settings.rs
crates/atradio-sdk/src/lexicons/: mod.rs
crates/atradio-uniffi/: Cargo.toml
crates/atradio-uniffi/src/: capi.rs  lib.rs
deploy/: Caddyfile
doc/: cljdoc.edn
docs/: sdk-design.md
sdk/clojure/: .gitignore  README.md  build.clj  build.sh  deps.edn  mise.toml
sdk/elixir/: .gitignore  README.md  mix.exs
sdk/elixir/lib/: atradio.ex
sdk/erlang/: .gitignore  README.md  build.sh  gleam.toml  rebar.config
sdk/erlang/doc/: .build  .build.epub  404.html  api-reference.html  atradio.epub  atradio.html  atradio_nif.html  atradio_smoke.html  index.html  readme.html  search.html
sdk/erlang/priv/: atradio_nif.manifest
sdk/erlang/src/: atradio.app.src  atradio.erl  atradio_erl.app.src  atradio_nif.erl  atradio_smoke.erl
sdk/gleam/: .gitignore  README.md  gleam.toml  manifest.toml
sdk/gleam/src/: atradio_gleam.gleam  smoke.gleam
sdk/go/: README.md  agent.go  appview.go  go.mod  go.sum  records.go  rkey.go
sdk/python/: .gitignore  README.md  build.sh  console.py  pyproject.toml
sdk/python/examples/: smoke.py
sdk/python/src/atradio/: __init__.py  _native.py  atradio_uniffi.py
sdk/ruby/: .gitignore  Gemfile  README.md  Rakefile  atradio.gemspec  build.sh
sdk/ruby/examples/: smoke.rb
sdk/ruby/lib/: atradio.rb  manifest.json
sdk/scripts/: .gitignore  build-native.sh  gen-erlang-manifest.sh  gen-uniffi-manifest.sh  publish-clojure.sh  publish-elixir.sh  publish-erlang.sh  publish-gleam.sh  publish-python.sh  publish-ruby.sh  publish-typescript.sh
sdk/typescript/: README.md  package.json  tsconfig.build.json  tsconfig.json
sdk/typescript/src/: agent.ts  appview.ts  favorite-rkey.ts  index.ts
systemd/: README.md  atradio-api.service  atradio-jetstream.service  atradio-media-proxy.service
tools/console/: README.md  bb.edn  deps.edn
tools/console/.cpcache/: 2582488212.basis  2582488212.cp
tools/console/src/: user.clj
(+104 files in other folders)
