[workspace]
members = ["cli"]
resolver = "2"

[workspace.package]
authors = ["Tsiry Sandratraina <tsiry.sndr@rocksky.app"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/tsirysndr/atradio.fm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
