[package]
name = "atradio"
version = "0.3.0"
edition = "2021"
description = "atradio.fm in your terminal — a TUI radio player on the AT Protocol"
# NOTE: rockbox-playback is GPL-2.0-or-later; linking it makes this binary GPL.
license = "GPL-2.0-or-later"
authors = ["Tsiry Sandratraina <tsiry.sndr@rocksky.app>"]
repository = "https://github.com/tsirysndr/atradio.fm"

[[bin]]
name = "atradio"
path = "src/main.rs"

[dependencies]
jacquard = { version = "0.12", default-features = false, features = [
    "api",
    "dns",
    "derive",
    "cache",
    "loopback",
] }
jacquard-common = "0.12"
jacquard-lexicon = "0.12"
jacquard-derive = "0.12"

# audio engine + DSP (GPL-2.0)
rockbox-playback = ">=0.4.1"

# async runtime + HTTP (AppView reads, radio-browser search, ICY)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

# atradio Connect: remote-control WebSocket client to the AppView hub.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# CLI + TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
fuzzy-matcher = "0.3"

# misc
anyhow = "1"
directories = "5"
chrono = { version = "0.4", features = ["clock"] }
smol_str = { version = "0.3", features = ["serde"] }
toml = "0.8"

# Linux-only: expose the player over MPRIS (D-Bus) for media-key / desktop
# integration. No-op on macOS/Windows. Same version + tokio feature as fin's
# proven fin-mpris crate.
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { version = "0.10", features = ["tokio"] }

[features]
default = ["fm_atradio"]
# Gates the code generated from packages/lexicons/lexicons/atradio.
fm_atradio = []

[profile.release]
opt-level = 3
lto = "thin"
strip = true
