[package]
name = "atradio"
version = "0.5.2"
edition = "2021"
description = "atradio.fm in your terminal — a TUI radio player on the AT Protocol"
# NOTE: rockbox-playback is GPL-2.0-or-later; linking it makes this binary GPL.
license = "GPL-2.0-or-later"
authors = ["Tsiry Sandratraina <tsiry.sndr@rocksky.app>"]
repository = "https://github.com/tsirysndr/atradio.fm"

[[bin]]
name = "atradio"
path = "src/main.rs"

[dependencies]
# The atradio.fm SDK: auth, writes, the AppView read client, and the generated
# fm.atradio.* lexicon bindings all live here now.
atradio-sdk = { version = "0.1", path = "../crates/atradio-sdk" }

jacquard = { version = "0.12", default-features = false, features = [
    "api",
    "dns",
    "derive",
    "cache",
    "loopback",
] }
jacquard-common = "0.12"

# audio engine + DSP (GPL-2.0)
rockbox-playback = ">=0.4.1"

# async runtime + HTTP (AppView reads, radio-browser search, ICY)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

# atradio Connect: remote-control WebSocket client to the AppView hub.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }

# CLI + TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
fuzzy-matcher = "0.3"

# gRPC control API: unix socket by default, TCP/HTTP when a port is configured.
# Versions track the hyper 1.x / tower 0.5 / h2 0.4 stack already pulled by reqwest.
tonic = "0.13"
tonic-reflection = "0.13"
prost = "0.13"
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.5", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }

# misc
anyhow = "1"
directories = "5"
chrono = { version = "0.4", features = ["clock"] }
smol_str = { version = "0.3", features = ["serde"] }
toml = "0.8"
# mDNS advertising/discovery for the gRPC control API. Pinned to 0.13.x: 0.14+
# depends on socket-pktinfo, whose unix path uses Linux/macOS-only IP_PKTINFO
# and fails to build on FreeBSD/NetBSD. 0.13 is pure-socket and builds on the
# BSDs too, so mDNS works on every supported platform.
mdns-sd = "0.13"
if-addrs = "0.15"

# Linux-only: expose the player over MPRIS (D-Bus) for media-key / desktop
# integration. No-op on macOS/Windows. Same version + tokio feature as fin's
# proven fin-mpris crate.
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { version = "0.10", features = ["tokio"] }

[build-dependencies]
# Regenerates src/grpc/ from proto/ when protoc is available (codegen is
# committed so plain `cargo install` works without protobuf installed).
tonic-build = "0.13"

# NOTE: the fm.atradio.* lexicon bindings moved to the atradio-sdk crate, so the
# old `fm_atradio` feature gate is gone.
#
# NOTE: profile settings moved to the workspace root Cargo.toml — Cargo ignores
# `[profile.*]` on non-root workspace members.
