[package]
name = "atradio-nif"
version = "0.1.0"
edition = "2021"
description = "Erlang NIF (Rustler) bindings for atradio-sdk"
license = "MIT OR Apache-2.0"

[lib]
name = "atradio_nif"
crate-type = ["cdylib"]

[dependencies]
atradio-sdk = { path = "../atradio-sdk" }
rustler = "0.34"
tokio = { version = "1", features = ["rt-multi-thread"] }
once_cell = "1"
serde = "1"
serde_json = "1"
