[project]
name = "atradio"
version = "0.1.0"
description = "Official Python SDK for atradio.fm — FFI bindings to the shared Rust core"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Tsiry Sandratraina" }]

[dependency-groups]
# Interactive REPL for playing with the SDK: `uv run --group console console.py`.
console = ["ipython>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atradio"]
# Pure-Python wheel: ship the source + committed generated module + the download
# manifest, but NOT the ~11 MB native lib (fetched on first import; see
# _native.py). A gitignored local dev build (src/atradio/*.dylib|so|dll) must be
# force-excluded so it can't leak into a locally-built wheel.
artifacts = ["src/atradio/manifest.json"]
exclude = ["src/atradio/*.so", "src/atradio/*.dylib", "src/atradio/*.dll"]
